<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Design.Light.NoActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapseToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/iv_big_poster"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/poster"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@drawable/poster_overlord"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/iv_small_poster"
                    android:layout_width="150dp"
                    android:layout_height="225dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="180dp"
                    android:contentDescription="@string/poster"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/poster_overlord" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar"
                app:titleTextColor="@android:color/black"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="4dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="NotSibling">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="center"
                        android:textSize="22sp"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/supermercado_one"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/exp_title"/>

                    <View
                        android:id="@+id/view1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/flix"
                        app:layout_constraintTop_toBottomOf="@id/tv_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/tv_release"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:textSize="12sp"
                        android:textColor="@android:color/black"
                        android:fontFamily="serif-monospace"
                        app:drawableStartCompat="@drawable/ic_date"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_title"
                        tools:text="@string/exp_release" />

                    <TextView
                        android:id="@+id/tv_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textSize="12sp"
                        android:textColor="@android:color/black"
                        android:fontFamily="serif-monospace"
                        app:drawableStartCompat="@drawable/ic_time"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_release"
                        tools:text="@string/exp_duration"/>

                    <TextView
                        android:id="@+id/tv_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:textSize="12sp"
                        android:textColor="@android:color/black"
                        android:fontFamily="serif-monospace"
                       app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_duration"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:drawableStartCompat="@drawable/ic_movie"
                        tools:text="@string/exp_genre"/>

                        <androidx.cardview.widget.CardView
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:elevation="4dp"
                            app:cardCornerRadius="42dp"
                            app:cardBackgroundColor="@color/flix"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_genre"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent">

                            <TextView
                                android:id="@+id/tv_score"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textColor="@android:color/white"
                                android:fontFamily="@font/bungee_shade"
                                android:gravity="center"
                                android:textSize="18sp"
                                tools:text="@string/exp_score"/>
                        </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="4dp"
                app:layout_constraintTop_toBottomOf="@id/cv_poster">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:textSize="20sp"
                        android:text="@string/overview"
                        android:textColor="@android:color/black"
                        android:textAlignment="center"
                        android:fontFamily="@font/supermercado_one"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/flix"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/overview"/>

                    <TextView
                        android:id="@+id/tv_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:fontFamily="serif-monospace"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/view2"
                        tools:text="@string/exp_overview"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>